--- a/deploy/operator-dp.yml
+++ b/deploy/operator-dp.yml
@@ -1,28 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pan-operator
+  name: pa-operator
   namespace: kube-system
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: pan-operator
+      app: pa-operator
   template:
     metadata:
       labels:
-        app: pan-operator
+        app: pa-operator
     spec:
       tolerations:
       - effect: NoSchedule
         key: node-role.kubernetes.io/master
-      serviceAccountName: pan-operator
+      serviceAccountName: pa-operator
       containers:
       - name: operator
-        image: inwinstack/pan-operator:v0.1.0
+        image: inwinstack/pa-operator:v0.2.0
         args:
-        - --v=2
         - --logtostderr=true
+        - --v=2
+        - --ignore-namespaces=kube-system,default,kube-public
         - --pa-host=172.22.132.114
         - --pa-username=admin
         - --pa-password=admin
