--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -15,14 +15,13 @@
   name = "k8s.io/client-go"
   version = "v8.0.0"
 
-
 [[constraint]]
   name = "github.com/inwinstack/operator-kit"
   branch = "v1.11.0"
 
 [[constraint]]
   name = "github.com/inwinstack/blended"
-  version = "v0.3.0"
+  branch = "master"
 
 [prune]
   go-tests = true
