Update README, deploy and examples

--- a/deploy/operator-dp.yml
+++ b/deploy/operator-dp.yml
@@ -27,3 +27,5 @@ spec:
         - --pa-host=172.22.132.114
         - --pa-username=admin
         - --pa-password=admin
+        - --commit-wait-time=2
+        - --retry=5
