--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -21,7 +21,7 @@
 
 [[constraint]]
   name = "github.com/inwinstack/blended"
-  branch = "master"
+  version = "v0.5.0"
 
 [prune]
   go-tests = true
