Use cluster scope for the PA Service

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -21,7 +21,7 @@
 
 [[constraint]]
   name = "github.com/inwinstack/blended"
-  version = "v0.5.1"
+  branch = "cluster-scope"
 
 [prune]
   go-tests = true
