--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -7,11 +7,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: pa-controller
+      k8s-app: pa-controller
   template:
     metadata:
       labels:
-        app: pa-controller
+        k8s-app: pa-controller
     spec:
       priorityClassName: system-cluster-critical
       tolerations:
